added base structure for the website

--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -11,13 +11,13 @@ html
 					a(class="navbar-brand" href="/") VR Club Universe
 				ul.nav.navbar-nav
 					li
-						a About
+						a(href="/about") About
 					li
 						a(href="/projects") Projects
 					li
-						a Download
+						a(href="/download") Download
 					li 
-						a Upload
+						a(href="/upload") Upload
 
 	block content
 
