--- a/Website/public/stylesheets/style.css
+++ b/Website/public/stylesheets/style.css
@@ -15,3 +15,19 @@
 	color : #4E3863;
 	margin-top: 40px;
 }
+
+.form-label {
+	font-size : 1.5em;
+	color: black;
+}
+
+.form-head {
+	text-align: center;
+	font-size: 2em;
+	padding-top: 40px;
+	font-weight: bold;
+}
+
+.form-control {
+	margin-bottom: 25px;
+}
