--- a/Website/views/upload.jade
+++ b/Website/views/upload.jade
@@ -5,7 +5,7 @@ block content
 		div.row
 			div.col-md-6.col-md-offset-3
 				p.form-head Upload to the VR Club Universe!
-				form
+				form(action="/upload" method="post")
 					div(class="form-group" style="padding-top: 25px;")
 						label.form-label Project Name :
 						input(type="text" class="form-control" id="email")
@@ -24,11 +24,11 @@ block content
 						label.form-label Tags : 
 						input(type="text" class="form-control" id="tags")
 						label.form-label Upload an Image : 
-						span.input-group
-							span.input-group-btn
-								span.btn-btn-default.btn-file Browse 
-									input(type="file" class="form-control" id="picture")
+						input(type="file" class="form-control" id="picture")
 
 						label.form-label Upload your Executable :
+						input(type="file" class="form-control" id="exec")
+					div.text-center
+						button(type="submit" class="btn btn-default") Submit!
 
 
