--- a/Website/views/projects.jade
+++ b/Website/views/projects.jade
@@ -1,5 +1,5 @@
 extends header 
 
 block content
-	p.name These are the projects in VR Club Universe
-
+    
+	p.name These are the projects in #{data}
