--- a/Website/views/upload.jade
+++ b/Website/views/upload.jade
@@ -5,22 +5,25 @@ block content
 		div.row
 			div.col-md-6.col-md-offset-3
 				p.form-head Upload to the VR Club Universe!
-				form(action="/upload" method="post")
+				form(action="/upload" method="post" style="margin-bottom : 50px;")
 					div(class="form-group" style="padding-top: 25px;")
 						label.form-label Project Name :
 						input(type="text" class="form-control" id="email")
-						label.form-label Contributor Email :
-						input(type="email" class="form-control" id="name")
+						div.row
+							div.col-xs-6
+								label.form-label Year :
+								select(class="form-control" id="year")
+									option 2015
+									option 2016
+									option 2017
+									option 2018
+							div.col-xs-6
+								label.form-label Contributor Email :
+								input(type="email" class="form-control" id="name")
 						label.form-label Description :
 						input(type="text" class="form-control" id="name" style="height : 200px")
 						label.form-label Project Members : 
 						input(type="text" class="form-control" id="members")
-						label.form-label Year :
-						select(class="form-control" id="year")
-							option 2015
-							option 2016
-							option 2017
-							option 2018
 						label.form-label Tags : 
 						input(type="text" class="form-control" id="tags")
 						label.form-label Upload an Image : 
