--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -4,6 +4,7 @@ html
 		title VR Club Universe
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 		script(src="/javascripts/jquery-3.1.1.min.js")
 		script(src="/javascripts/bootstrap.min.js")
 
