--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -13,14 +13,12 @@ html
 		nav(class="navbar" id="navbar")
 			div.container-fluid
 				div.navbar-header
-
 					button(type="button", class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse")
+						span.sr-only Toggle 
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-
 					a(class="navbar-brand" href="/") VR Club Universe
-
 				div(class="collapse navbar-collapse" id="#navbar-collapse")
 					ul.nav.navbar-nav
 						li
