v v v v  vv  v vv  vv rough start to the projects page and added json field

--- a/Website/public/stylesheets/style.css
+++ b/Website/public/stylesheets/style.css
@@ -46,6 +46,13 @@
 
 }
 
+.project-img {
+	width :  200%;
+	display: flex;
+	justify-content: center;
+	align-items: center
+}
+
 .proj-data{
 	padding-left : 20px;
 	padding-bottom: 10px;
