--- a/Website/views/download.jade
+++ b/Website/views/download.jade
@@ -1,5 +1,14 @@
 extends header 
-
+include ./mixins/download-form-element.jade
 block content
 	p.name This is the download page!
+	br
+	br
+	div.container-fluid
+		div.col-md-8.col-md-offset-2
+			form(action="/download" method="post")
+				div(class="form-check" style="padding-top: 25px;")
+				+download-form-element("qwerty")
+				div.text-center
+					button(type="submit" class="btn btn-default") Submit
 
