--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -2,11 +2,11 @@ doctype html
 html
 	head
 		title VR Club Universe
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+		link(rel='stylesheet', href='/public/stylesheets/style.css')
+		link(rel='stylesheet', href='/public/stylesheets/bootstrap.min.css')
 		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-		script(src="/javascripts/jquery-3.1.1.min.js")
-		script(src="/javascripts/bootstrap.min.js")
+		script(src="/public/javascripts/jquery-3.1.1.min.js")
+		script(src="/public/javascripts/bootstrap.min.js")
 
 
 	body
