--- a/Website/views/mixins/download-form-element.jade
+++ b/Website/views/mixins/download-form-element.jade
@@ -1,5 +1,5 @@
 mixin download-form-element(data)
 	div.row
 		div.checkbox
-			label.form-check-label #{data}
+			label.form-check-label #{data.Name}
 				input(type="radio" value="" class="form-check-input")
