--- a/Website/views/upload.jade
+++ b/Website/views/upload.jade
@@ -30,7 +30,7 @@ block content
 						input(type="file" class="form-control" id="picture" name="image")
 
 						label.form-label Upload your Executable :
-						input(type="file" class="form-control" id="exec" name="exec")
+						input(type="file" class="form-control" accept=".exe" id="exec" name="exec")
 					div.text-center
 						button(type="submit" class="btn btn-default") Submit!
 
