pushing about page

--- a/Website/views/about.jade
+++ b/Website/views/about.jade
@@ -1,5 +1,48 @@
 extends header 
 
 block content
-	p.name This is the about page!
+	div.container-fluid
+		div.row
+			div.col-md-10.col-md-offset-1(style="padding-top : 40px;")
+				div.proj-header About VR Club Universe
+				div.proj-container
+					div.about-text
+						p.tag “Explore a creative space showcasing member projects of all kinds and skill levels.”
+
+						p VR Club Universe is a project dedicated to creating a virtual reality platform to display projects developed by actual VR Club members. As members come and go, this universe will continue to showcase a portfolio of student creations ranging from beginner to experienced and with majors of all kinds. 
+
+						p The project was established in Winter 2016 as an eight member beginner project. Every year, students whether in project teams or as individuals create projects that were born from their own ideas and inspirations. Our goal is to preserve those projects and the legacy that the students brings when creating in this new and innovative field. 
+
+						p The application is designed to bring out the best of Virtual Reality to both new and experienced users. Visitors are placed in the VR Club spaceship and have accessed to ‘travel’ to different planets and galaxies. Each planet represents a student project. By doing this, we can promote the selection and enjoyment of 3D interactions in Virtual Reality and step away from 2D menus.
+
+						p VR Club Universe acts as medium to view these projects with the HTC Vive all without removing one’s headset. Because taking off and putting on the headset is immersion breaking and time-consuming, we strive to give users the ability to navigate all the projects available in the provided platform in one system. 
+
+						p A list of projects are available in the Projects tab. Eventually, projects will be available to download along with the VR Club Universe system. Any project members, leads, or developers will also be able to upload their project to showcase their work in the system. 
+
+						p A video of the current experience can be found here: --------------------
+
+						p Below are the list of project members throughout the development of VR Club Universe:
+
+						div.container-
+							div.row
+								img(src="/public/images/VRClubUni.png").center-block
+							div.row
+								div.col-md-8
+									li Kristin Agcaoili (Project Lead)
+									li Prasanth Abraham (Unity Programmer, Scene Design)
+									li Giovanni Aguirre (Unity Programmer, Scene Design, 3D Modeling)
+									li Molly Li (Unity Programmer, Scene Design)
+									li Allen Lin (Unity Programmer)
+									li Brittany Newton (Scene Design)
+									li April Tran (Scene Design)
+									li Michelle Viado (Scene Design, 3D Modeling)
+						
+
+
+
+
+
+
+
+					
 
