--- a/Website/views/mixins/project-mixin.jade
+++ b/Website/views/mixins/project-mixin.jade
@@ -8,7 +8,7 @@ mixin project-mixin(data)
 								div.proj-header #{data.Name}
 
 						div.row
-							div.col-md-2
+							div.col-md-2(align="center")
 								img(src="/data/VRClubUniverseData/VR_Demos/#{data.Year}/#{data.Executable}/#{data.Image}" class="project-img")
 							div.col-md-8.col-md-offset-2
 								div(class="row proj-data")
