--- a/Website/public/stylesheets/style.css
+++ b/Website/public/stylesheets/style.css
@@ -1,7 +1,16 @@
 /*background-color: #4E3863;*/
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
 
 #navbar {
 	background-color: #7b4ba8;
+}
+
+.navbar-brand,
+.navbar-nav li a {
+    line-height: 150px;
+    height: 50px;
+    padding-top: 0;
 }
 
 #navbar a {
@@ -10,7 +19,7 @@
 
 
 #navbar ul a {
-	font-size: 18px;
+	font-size: 20px;
 }
 
 .name {
@@ -50,10 +59,11 @@
 }
 
 .project-img {
-	width :  200%;
-	display: flex;
-	justify-content: center;
-	align-items: center
+	width :  220%;
+    border: solid;
+    border-width: 1px;
+    border-color: grey;
+    border-radius : 3px;
 }
 
 .proj-data{
@@ -66,9 +76,9 @@
 	font-size: 30px;
 	margin-bottom: 20px;
 	font-weight: bold;
+    font-fa
 
 }
-
 .year{
 	font-size: 28px;
 	margin-left: 20px;
@@ -127,6 +137,33 @@
     transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;
+}
+
+.about-text {
+    margin-right: 5%;
+    margin-left : 5%;
+    word-wrap: break-word;
+    font-size: 18px;
+}
+
+.about-text p {
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+
+.about-text img {
+    max-width: 50%;
+    margin-bottom: 30px;
+    margin-top: 15px;
+    border : solid;
+    border-color: grey;
+    border-width: 1px;
+    border-radius: 3px;
+}
+
+.tag {
+    font-style: italic;
+    padding-bottom: 15px;
 }
 
 .hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
