--- a/Website/views/about.jade
+++ b/Website/views/about.jade
@@ -19,15 +19,16 @@ block content
 
 						p A list of projects are available in the Projects tab. Eventually, projects will be available to download along with the VR Club Universe system. Any project members, leads, or developers will also be able to upload their project to showcase their work in the system. 
 
-						p A video of the current experience can be found here: --------------------
-
+						p A video of the current experience can be found here: 
+						br
+						iframe( width="560" height="315" src="https://www.youtube.com/embed/RACA0ifu_5g" frameborder="0" allowfullscreen).center-block
+						br
 						p Below are the list of project members throughout the development of VR Club Universe:
 
-						div.container-
+						div.container-fluid
+							div.qtr-label Winter 2017
 							div.row
-								img(src="/public/images/VRClubUni.png").center-block
-							div.row
-								div.col-md-8
+								div.col-md-6(style="padding-top : 15px;")
 									li Kristin Agcaoili (Project Lead)
 									li Prasanth Abraham (Unity Programmer, Scene Design)
 									li Giovanni Aguirre (Unity Programmer, Scene Design, 3D Modeling)
@@ -36,6 +37,34 @@ block content
 									li Brittany Newton (Scene Design)
 									li April Tran (Scene Design)
 									li Michelle Viado (Scene Design, 3D Modeling)
+								div.col-md-6
+									img(src="/public/images/VRClubUni.png" style="max-width : 100%")
+						div.container-fluid
+							div.qtr-label Spring 2017
+							div.row
+								div.col-md-6(style="padding-top : 15px")
+									li Kristin Agcaoili (Project Lead)
+									li Prasanth Abraham (Unity Programmer, Scene Design)
+									li Michelle Viado (Scene Design, 3D Modeling)
+									li Subhankar Panda (Unity Programmer)
+									li Cortez Page (Unity Programmer)
+									li Dana Kimball (Unity Programmer)
+								div.col-md-6
+									img(src="/public/images/Image_SP17.png" style="max-width : 100%")
+						div.container-fluid
+							div.qtr-label Fall 2017
+							div.row
+								div.col-md-6(style="padding-top : 15px")
+									li Kristin Agcaoili (Project Lead)
+									li Prasanth Abraham (Unity Programmer, Scene Design)
+									li Eunice Chan (User Experience Designer)
+									li Dana Kimball (Unity Programmer)
+									li Henry Narabe (Unity Programmer)
+									li Subhankar Panda (Web Lead)
+									li Rui Ren (Web Developer)
+									li Virginia Xu (Web Developer)
+								div.col-md-6
+									img(src="/public/images/fall17.png" style="max-width : 100%")
 						
 
 
