--- a/Website/views/download.jade
+++ b/Website/views/download.jade
@@ -8,14 +8,18 @@ block content
 	div.container-fluid
 		div.col-md-8.col-md-offset-2
 			form(action="/download" method="post")
-				div(class="form-check" style="padding-top: 25px;")
-					-var data = JSON.parse(json);
-					-for(var prop in data)
-						p.year #{prop}
-						div.container-fluid
-							-var inner_obj = JSON.parse(data[prop])
-							-for (var key in inner_obj["PlanetJSON"])
-								+download-form-element(inner_obj["PlanetJSON"][key])
+				-var data = JSON.parse(json);
+				-for(var prop in data)
+					div(style="margin-top: 30px;").row
+						div.col-md-8.year
+							span #{prop}
+					div.container-fluid
+						div.row
+							div.col-md-10.col-md-offset-1.proj-container
+								div.container-fluid
+									-var inner_obj = JSON.parse(data[prop])
+									-for (var key in inner_obj["PlanetJSON"])
+										+download-form-element(inner_obj["PlanetJSON"][key])
 				div.text-center
 					button(type="submit" class="btn btn-default") Submit
 
