--- a/Website/views/download_success.jade
+++ b/Website/views/download_success.jade
@@ -1,4 +1,7 @@
 extends header 
 
 block content
-	p SUCCESS!
+	div.container
+		div.row
+			div.col-md-6.col-md-offset-3
+				p.form-head Download Complete!
