--- a/Website/views/mixins/download-form-element.jade
+++ b/Website/views/mixins/download-form-element.jade
@@ -1,5 +1,5 @@
 mixin download-form-element(data)
 	div.row
 		div.form-check
-			label.form-check-label #{data.Name}
+			label.form-label #{data.Name}
 				input(type="checkbox" value="#{data.Year}" class="form-check-input" name="#{data.Name}" checked)
