--- a/Website/views/footer.jade
+++ b/Website/views/footer.jade
@@ -2,4 +2,9 @@
 block footer
 	footer
 		div.container
-			span this is a footer!
+			span Built by the VR Club Universe team @ 
+			a(href="vrclub.ucsd.edu").link UCSD VR Club
+
+			span.github 
+				i.fa.fa-github.fa-lg
+					a(href="https://github.com/UCSDVR/VRUniverse" style="font-family : Nunito; font-size : 18px;").link   View our code on Github
