--- a/Website/public/stylesheets/style.css
+++ b/Website/public/stylesheets/style.css
@@ -1,6 +1,9 @@
 /*background-color: #4E3863;*/
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+html {
+    height: 100%;
+}
 
 #navbar {
 	background-color: #7b4ba8;
@@ -242,17 +245,41 @@
 
 }
 
+#body {
+    padding: 0 0 100px;
+    position: relative;
+}
+
+body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 2rem;
+    min-height: 100%;
+}
+
 footer {
- position: fixed;
+  position: absolute;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  min-height: 70px;
-  max-height: 80px;
+  left: 0;
+  padding: 1rem;
   background-color: #7b4ba8;
-  color: white;
-  padding: 10px 0px;
-  padding-top: 10px;
-  margin-top: 30px;
-  font-weight: 100;
-  clear: both;
+  color : white;
+  font-size: 16px;
+  height: 6%;
+  border-radius: 3px;
+}
+
+footer .container {
+    margin-left: 0;
+}
+
+.link {
+    color: #fbfbfb;
+    text-decoration: underline;
+}
+
+.github {
+    position: absolute;
+    right: 7px;
 }
