home iframe background

--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -25,6 +25,8 @@ html
 					div(class="navbar-collapse collapse" id="navbar-collapse")
 						ul.nav.navbar-nav.navbar-right
 							li
+								a(href="/user/signup").hvr-underline-from-center Sign Up
+							li
 								a(href="/about").hvr-underline-from-center About
 							li
 								a(href="/projects").hvr-underline-from-center Projects
