--- a/Website/views/user/signin.jade
+++ b/Website/views/user/signin.jade
@@ -12,7 +12,7 @@ block content
                     label.form-label Username :
                     input(type="text" id="username" name="username" class="form-control")
                 div.form-group
-                    label.form-label Username :
+                    label.form-label Password:
                     input(type="password" id="password" name="password" class="form-control")
                 input(type="hidden" name="_csrf" value=csrfToken)
                 button(type="submit") Sign in
