--- a/Website/views/index.jade
+++ b/Website/views/index.jade
@@ -1,6 +1,29 @@
 extends header
 
 block content
+	head
+		style(type="text/css").
+			.video-background {
+				background: #ffffff;
+				position: fixed;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				z-index: -99;
+			}
+			.video-foreground,
+			.video-background iframe {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				pointer-events: none;
+			}
+	div(class="video-background")
+		div(class="video-foreground")
+			iframe(src="https://www.youtube.com/embed/RACA0ifu_5g?controls=0&showinfo=0&rel=0&autoplay=1&loop=1" frameborder="0" allowfullscreen)
 	div.container-fluid
 		div.row
 			div.title
