--- a/Website/views/user/signup.jade
+++ b/Website/views/user/signup.jade
@@ -14,5 +14,8 @@ block content
                 div.form-group
                     label.form-label Password :
                     input(type="password" id="password" name="password" class="form-control")
+                div.form-group
+                    label.form-label Invite Code: (vrclub for now)
+                    input(type="text" id="addcode" name="addcode" class="form-control")
                 input(type="hidden" name="_csrf" value=csrfToken)
                 button(type="submit") Sign Up
