--- a/Website/views/user/signin.jade
+++ b/Website/views/user/signin.jade
@@ -15,4 +15,4 @@ block content
                     label.form-label Password:
                     input(type="password" id="password" name="password" class="form-control")
                 input(type="hidden" name="_csrf" value=csrfToken)
-                button(type="submit") Sign in
+                button(type="submit" class="btn btn-default") Sign in
