--- a/Website/views/user/signup.jade
+++ b/Website/views/user/signup.jade
@@ -15,7 +15,7 @@ block content
                     label.form-label Password :
                     input(type="password" id="password" name="password" class="form-control")
                 div.form-group
-                    label.form-label Invite Code: (vrclub for now)
+                    label.form-label Invite Code: ( use code: vrclub for now )
                     input(type="text" id="addcode" name="addcode" class="form-control")
                 input(type="hidden" name="_csrf" value=csrfToken)
-                button(type="submit") Sign Up
+                button(type="submit" class="btn btn-default") Sign Up
