--- a/Website/public/stylesheets/style.css
+++ b/Website/public/stylesheets/style.css
@@ -311,3 +311,23 @@ a.tag-link span:hover {
     background-color: #7b4ba8;
     color: #fbfbfb;
 }
+
+.video-background {
+    background: #ffffff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -99;
+}
+            
+.video-foreground,
+.video-background iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
