--- a/Website/public/stylesheets/style.css
+++ b/Website/public/stylesheets/style.css
@@ -39,22 +39,6 @@ html {
 	margin-top: 40px;
 }
 
-.form-label {
-	font-size : 1.5em;
-	color: black;
-}
-
-.form-head {
-	text-align: center;
-	font-size: 2em;
-	padding-top: 40px;
-	font-weight: bold;
-}
-
-.form-control {
-	margin-bottom: 25px;
-}
-
 .project-name {
 	font-size: 25px;
 	color: black;
@@ -246,7 +230,6 @@ html {
 }
 
 #body {
-    padding: 0 0 100px;
     position: relative;
 }
 
@@ -321,7 +304,7 @@ a.tag-link span:hover {
     left: 0;
     z-index: -99;
 }
-            
+
 .video-foreground,
 .video-background iframe {
     position: absolute;
@@ -331,3 +314,66 @@ a.tag-link span:hover {
     height: 100%;
     pointer-events: none;
 }
+
+.sidenav {
+    width : 20%;
+    z-index: 1;
+    left : 0;
+    overflow-x: hidden;
+    background-color: white;
+    position: fixed;
+    height: 86.7vh;
+    /*border-right: solid;
+    border-right-color: #7b4ba8;
+    border-right-width: 2px;*/
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    margin-top: 50px;
+    -moz-box-shadow: 0 0 1px #ccc;
+    -webkit-box-shadow: 0 0 1px #ccc;
+    box-shadow: 0px 1px 1px 2px #ccc;
+}
+
+.sidenav h2 {
+    color: #7b4ba8;
+    font-weight: bold;
+}
+
+.sidenav-params {
+    width: 100%;
+    padding-top : 12%;
+    height: 80%;
+}
+
+.sidenav-params label {
+    margin-left: 10px;
+    font-size: 16px;
+}
+
+.sidenav-params button {
+    margin-top: 10%;
+    color : white;
+    background-color: #7b4ba8; 
+}
+
+.sidenav-params button:hover {
+    color : #7b4ba8;
+    background-color: #fbfbfb;
+    box-shadow: 0px 1px 1px 2px #ccc;
+
+
+}
+
+.sidenav-params-container {
+    margin-left : 25%;
+}
+
+.download-content {
+    float: left;
+    width : 80%;
+    margin-left : 20%;
+    min-height: 86.7vh;
+    margin-top: 100px;
+}
+
+
