--- a/Website/views/projects.jade
+++ b/Website/views/projects.jade
@@ -1,14 +1,48 @@
-extends header 
-include ./mixins/project-mixin.jade
+extends header 	
+include ./mixins/filter-mixin.jade
 
 block content
-	-var data = JSON.parse(json);
-	-for(var prop in data)
-		div.container-fluid
-			div(style="margin-top: 30px;").row
-				div.col-md-8.year
-					span #{prop}
-			-var inner_obj = JSON.parse(data[prop])
-			-for (var key in inner_obj["PlanetJSON"])
-					+project-mixin(inner_obj["PlanetJSON"][key])
+	style.
+		#navbar {
+			margin-bottom : 0px;
+			position : fixed;
+			width : 100%;
+			z-index : 100;
+		}
 
+		footer {
+			position : fixed;
+		}
+
+	-var searchTags = JSON.parse(tags);
+	div.sidenav-container
+		div.sidenav
+			h2.text-center Filter
+			div.sidenav-params
+				form(method="get" action="/filter/")
+					div.sidenav-params-container
+						-for (var tag in searchTags)
+							div
+								input(type="checkbox", name="#{searchTags[tag].tag}" class="download-checkbox", value="true" id="#{searchTags[tag].tag}")
+								label(for="#{searchTags[tag].tag}") #{searchTags[tag].tag}
+					button(type="submit" id="filterbutton").center-block.btn.btn-lg Search
+
+	div.download-content
+
+		-if (tagArr == null)
+			h2.text-center All Projects in VR Club Universe
+		-else if (tagArr.length == 1)
+			h2.text-center All Projects with Tag #{tagArr}
+		-else if (tagArr.length > 1)
+			h2.text-center All Projects with Tags #{tagArr}
+		-else if (tagArr.length == 0)
+			h2.text-center Can't find any projects with those tags!
+
+		-var data = JSON.parse(json);
+			-for(var prop in data)
+				div.container-fluid
+					+filter-mixin(data[prop])
+
+	script.
+		let arr = !{tagArr};
+		console.log(arr);
