--- a/Website/views/download.jade
+++ b/Website/views/download.jade
@@ -4,6 +4,7 @@ include ./mixins/project-mixin.jade
 block content
 	-var data = JSON.parse(json);
 	-for(var prop in data)
+		-console.log(typeof data[prop]);
 		div.container-fluid
 			div(style="margin-top: 30px;").row
 				div.col-md-8.year
