--- a/Website/views/index.jade
+++ b/Website/views/index.jade
@@ -4,7 +4,7 @@ block content
 	head			
 		div(class="video-background")
 			div(class="video-foreground")
-				iframe(src="https://youtu.be/eQo5MkgLEhk" frameborder="0" allowfullscreen)
+				iframe(src="https://www.youtube.com/embed/eQo5MkgLEhk" frameborder="0" allowfullscreen)
 		div.container-fluid
 			div.row
 				div.title
