VR Club Universe to VRUniverse Rebrand

--- a/Website/views/footer.jade
+++ b/Website/views/footer.jade
@@ -2,7 +2,7 @@
 block footer
 	footer
 		div.container
-			span Built by the VR Club Universe team @ 
+			span Built by the VRUniverse team @ 
 			a(href="vrclub.ucsd.edu").link UCSD VR Club
 
 			span.github 
