--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -1,7 +1,7 @@
 doctype html
 html
 	head
-		title VR Club Universe
+		title VRUniverse
 		link(rel='stylesheet', href='/public/stylesheets/style.css')
 		link(rel='stylesheet', href='/public/stylesheets/bootstrap.min.css')
 		link(rel='stylesheet', href='/public/stylesheets/css/font-awesome.min.css')
@@ -21,7 +21,7 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a(class="navbar-brand" href="/" style="font-size : 25px; font-family : 'Nunito', sans-serif; font-weight : bold;") VR Club Universe
+						a(class="navbar-brand" href="/" style="font-size : 25px; font-family : 'Nunito', sans-serif; font-weight : bold;") VRUniverse
 					div(class="navbar-collapse collapse" id="navbar-collapse")
 						ul.nav.navbar-nav.navbar-right
 							li
