--- a/Website/views/projects.jade
+++ b/Website/views/projects.jade
@@ -30,7 +30,7 @@ block content
 	div.download-content
 
 		-if (tagArr == null)
-			h2.text-center All Projects in VR Club Universe
+			h2.text-center All Projects in VRUniverse
 		-else if (tagArr.length == 1)
 			h2.text-center All Projects with Tag #{tagArr}
 		-else if (tagArr.length > 1)
