--- a/Website/views/upload.jade
+++ b/Website/views/upload.jade
@@ -4,7 +4,7 @@ block content
 	div.container
 		div.row
 			div.col-md-6.col-md-offset-3
-				p.form-head Upload to the VR Club Universe!
+				p.form-head Upload to the VRUniverse!
 				form(action="/upload" method="post" style="margin-bottom : 50px;" enctype="multipart/form-data")
 					div(class="form-group" style="padding-top: 25px;")
 						label.form-label Project Name :
